GNOME Bugzilla – Bug 723323
mouse wheel on sound icon change the position of video rather the sound
Last modified: 2014-02-03 15:26:01 UTC
totem 3.11.x Reproduce. 1. playing a video 2. place the mouse over totem's sound icon and use the wheel Expected behavior: increase/decrease sound Output: forward/backward video
commit f0afe3aeb0b2245c6b923e495b1344e9e279ff45 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Feb 3 16:23:39 2014 +0100 backend: Fix mouse wheel on volume seeking The scroll event should have been captured by the volume widget instead. https://bugzilla.gnome.org/show_bug.cgi?id=723323 commit 4fb45069e40a087f94a7a80aa341925eda201f76 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Feb 3 16:22:57 2014 +0100 backend: Don't pass an event to translate_coords() As we might want it to handle different types of events.