backend: Fix mouse wheel on volume seeking

The scroll event should have been captured by the volume widget
instead.

https://bugzilla.gnome.org/show_bug.cgi?id=723323